[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adv-kernel"
version = "0.1.0"
description = "Adaptive Density Variance (ADV) Kernel — a locally-adaptive hybrid RBF×Polynomial kernel for scikit-learn SVMs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Pijush Kanti Roy Partho", email = "pijushkantiroy2040@gmail.com" }
]
keywords = ["machine-learning", "svm", "kernel", "adaptive", "density", "variance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.23",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/InquietoPartho/adv_kernel"
Repository = "https://github.com/InquietoPartho/adv_kernel"
"Bug Tracker" = "https://github.com/InquietoPartho/adv_kernel/issues"

[tool.hatch.build.targets.wheel]
packages = ["adv_kernel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
